FTB-Community/force-app/main/default/objects/FTB_Formation__c/FTB_Formation__c.object-meta.xml
<CustomObject>
    <description>FTB Object to track formations</description>
    <label>Formation</label>
    <nameField>
        <label>Formation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>