FTB-Community/force-app/main/default/objects/FTB_Formation__c/fields/FTB_Calendar__c.field-meta.xml
<CustomField>
    <fullName>FTB_Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendar</label>
    <referenceTo>FTB_Calendar__c</referenceTo>
    <relationshipLabel>Formations</relationshipLabel>
    <relationshipName>FTB_Formations</relationshipName>
    <type>Lookup</type>
</CustomField>