FTB-Community/force-app/main/default/objects/FTB_Formation__c/fields/FTB_Inactives__c.field-meta.xml
<CustomField>
    <fullName>FTB_Inactives__c</fullName>
    <label>Inactives</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>