FTB-Community/force-app/main/default/objects/FTB_Formation__c/fields/FTB_Starters__c.field-meta.xml
<CustomField>
    <fullName>FTB_Starters__c</fullName>
    <label>Starters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>