FTB-Community/force-app/main/default/objects/FTB_Formation__c/fields/FTB_Substitutes__c.field-meta.xml
<CustomField>
    <fullName>FTB_Substitutes__c</fullName>
    <label>Substitutes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>